[metadata]
name = bingeboard
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Bingehack4 Bingeboard API
url = "https://github.com/liam-middlebrook/bingehack4-binge-api"
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
